app/assets/css/desktop-rendition.less
body, .fixed-header, .nav.tab-bar, nav.tab-bar, .in-settings .list-group.fixed, .add-tile-container {
  max-width: @desktop-rendition-width;
  margin-right: @desktop-rendition-width-from-center;
  margin-left: auto;
}

.fixed-header, .nav.tab-bar, nav.tab-bar, .in-settings .list-group.fixed, .add-tile-container {
  position: fixed;
}

.add-tile-container {
  display: flex;
  flex-direction: row-reverse;
  left: 0;
  right: 0;
  bottom: @start-tab-bar-height;
  padding: 1.5em;
}

.id7-main-content-area {
  overflow-y: visible !important;
}

.marketing {
  user-select: text;
  position: fixed;
  align-items: center;
  justify-content: center;
  height: 100vh;
  display: flex;
  right: ~"calc("(@desktop-rendition-width-from-center)~"+" (@desktop-rendition-width)~")";
  .inner-content {
    width: 100%;
    max-width: @desktop-rendition-width;
    margin-left: auto;
    margin-right: auto;
    padding: 2rem;
    font-size: 18px;
    color: #fff;
  }
  .app-dl {
    width: 160px;
  }
}

.marketing .inner-content {
  h1 {
    color: white;
    font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
    font-size: 50px;
    text-align: center;
    letter-spacing: -0.2px;
    text-transform: uppercase;
    border-bottom: 0;
    padding-bottom: 0;
    margin-bottom: 11px;

    .light {
      opacity: 0.6;
    }
  }
}

html {
  background: #8c6e96;
}


main#main:not(.in-root) {
  height: ~"calc(100vh -" (@start-masthead-height) ~")";
}

@media screen and (max-width: @desktop-rendition-min-body) {
  .marketing {
    display: none;
  }

  html.theme-transparent body.in-root {
    max-width: 100vw;
    background-size: initial;
    background-attachment: fixed;
    background-position: 0 50%;
  }

  body, .fixed-header, .nav.tab-bar, nav.tab-bar, .in-settings .list-group.fixed, .add-tile-container {
    margin-right: 0;
    margin-left: 0;
    max-width: 100vw;
  }

  .tile--zoomed  .tile__header {
    margin-right: 0;
    margin-left: 0;
  }

  html {
    background: transparent;
  }

  html.not-app {
    background: #f9f9f9;
  }
}


@media screen and (min-width: @desktop-rendition-min-body) {

  .not-app {
    .fixed-header { top: @desktop-rendition-vertical-border; }
    .tab-bar { bottom: @desktop-rendition-vertical-border; }

    .main-content {
      padding-bottom: (@desktop-rendition-vertical-border * 2);
      padding-top: @desktop-rendition-vertical-border;
    }

    nav.tab-bar:after, header.id7-page-header:before {
      content: "";
      position: fixed;
      height: @desktop-rendition-vertical-border;
      background-color: #8c6e96;
      max-width: @desktop-rendition-width;
      margin-right: ~"calc(50vw - 768px )";
      margin-left: auto;
      width: @desktop-rendition-width;
      left: 0;
      right: 0;
    }

    nav.tab-bar:after {
      bottom: 0;
    }

    header.id7-page-header:before {
      top: 0;
      border-bottom: 1px solid white;
    }

    #app-container, header.id7-page-header {
      border-left: 1px solid white;
      border-right: 1px solid white;
    }
  }
}

